v1.6
	+ Add Greek translation (Lazaros)
	+ Bug: Fix non-ascii characters when scrobbling with non-utf8 locale
	+ Bug: Selected item changed on double-click
	+ Bug: Use consistent behavior for titlebar

v1.5.2 - June 5, 2008
	+ Improved artwork/lyrics caching through case-insenstive searching
	+ Add Turkish translation (Gökmen)
	+ Bug: Fix artwork for files with unicode characters
	+ Bug: Fix crash if mpd library is empty
	+ Bug: Fix regression where dbus-python became required
	+ Bug: Bold titles lose sync if song changes with visible filterbar
	+ Bug: Doesn't scrobble when same song is repeated
	+ Bug: Python conflict when installed with sugar (OLPC)
	+ Bug: Fix artwork display in song notification window for RTL languages
	+ Bug: Fix progressbar seeking for RTL languages
	+ Bug: No play/pause indicator in egg tray icon if started while mpd is active

v1.5.1 - May 3, 2008
	+ Swap 'shuffle' and 'random' to be consistent with MPD
	+ "Save list to">"foo" can now either replace playlist or append songs
	+ Add Catalan translation (Franc)
	+ Add Arabic translation (Ahmad)
	+ Bug: Fix play/pause with multimedia keys (Vinay)
	+ Bug: Prevent possible traceback from gobject.filename_from_utf8
	+ Bug: 'play after replace' when in shuffle mode plays 1st song, not random
	+ Bug: Fix random, repeat, and toggle commands from console
	+ Bug: Songs not tagged with the album name don't show up
	+ Bug: Cannot disconnect when MPD_HOST and MPD_PORT are set
	+ Bug: Fix %D and %N formats within brackets

v1.5 - April 3, 2008
	+ Replace album view with genre view for library
	+ Display covers for albums in artist/genre views
	+ Add menu items and shortcuts for playing library items after add/replace
	+ Allow setting artwork for streams
	+ Optional stylized album art with cases (Aidan)
	+ New, faster python mpd interface (jat)
	+ --popup argument to popup song notification (requires D-Bus) (Oleg)
	+ Show 'Untagged' artists/genres in their respective library views